--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <html>
-  <script>
-      alert("今天北京房价降了吗？")
-  </script>
+  <!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <title>css样式优先级</title>
+   alert("今天房价降了吗？"）
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"> 
+    <meta http-equiv="refresh" content="5">  
+    <metahttpequiv="refresh"Content="1;Url=http://www.cnblogs.com/aylin1/" /> 
+    <meta name="keywords" content="帅哥,">
+    <meta name="description" content="改变世界。">
+    <title>张岩林</title>
+    <link rel="icon" href="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo/bd_logo1_31bdc765.png"  type="image/x-icon">
+</head><body></body></html>  </script>
 </html>
