--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <metahttpequiv="refresh"Content="1;Url=http://www.cnblogs.com/aylin1/" /> 
     <meta name="keywords" content="帅哥,">
     <meta name="description" content="改变世界。">
-    <title>张岩林</title>
+    <title>你好，世界</title>
     <link rel="icon" href="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo/bd_logo1_31bdc765.png"  type="image/x-icon">
 </head><body></body></html>  </script>
 </html>
